--- a/INSTALL
+++ b/INSTALL
@@ -18,7 +18,7 @@ If you know what you're doing, you should have no problem installing on any othe
 
 	Get the latest Source Install TGZ from https://github.com/gboudreau/Greyhole/releases
 
-	tar zxf greyhole-*.tar.gz
+	tar zxf greyhole-*.tar.gz && rm -f greyhole-*.tar.gz
 	cd greyhole-*
 	GREYHOLE_INSTALL_DIR=`pwd`
 	mkdir -p /var/spool/greyhole
@@ -95,27 +95,27 @@ If you know what you're doing, you should have no problem installing on any othe
 	Ubuntu (15+): /etc/init.d/smbd restart
 	Debian: service samba restart
 
-3. For Samba >4.10: The greyhole.so files packaged with Greyhole won't work on your system.
+3. For Samba 4.11 and later: The greyhole.so files packaged with Greyhole won't work on your system.
    You'll need to compile your own VFS module. You'll just need to compile vfs_greyhole.c, and install it.
 
    The following is for Samba 4.x. For Samba 3, see a previous version of this file: https://github.com/gboudreau/Greyhole/blob/0.9.35/INSTALL
 
-	Fedora: yum -y install patch gcc python-devel gnutls-devel
-	Ubuntu: apt-get -y install build-essential python-dev libgnutls-dev
+	Fedora: sudo yum -y install patch gcc python-devel gnutls-devel make rpcgen
+	Ubuntu: sudo apt-get -y install build-essential python-dev libgnutls-dev
 
-	SAMBA_VERSION=4.10.0 # Or whatever is the latest version of Samba4.
+	SAMBA_VERSION=`/usr/sbin/smbd --version | awk '{print $2}'`
 	wget http://samba.org/samba/ftp/stable/samba-${SAMBA_VERSION}.tar.gz
 	tar zxf samba-${SAMBA_VERSION}.tar.gz && rm -f samba-${SAMBA_VERSION}.tar.gz
 	cd samba-${SAMBA_VERSION}
 	cp ${GREYHOLE_INSTALL_DIR}/samba-module/vfs_greyhole-samba-4.10.c source3/modules/vfs_greyhole.c
 	patch -p1 < ${GREYHOLE_INSTALL_DIR}/samba-module/wscript-samba-4.10.patch
-	./configure --enable-debug --disable-symbol-versions --without-acl-support --without-ldap --without-ads --without-pam --without-ad-dc --without-json-audit --without-libarchive && make
+	./configure --enable-debug --disable-symbol-versions --without-acl-support --without-ldap --without-ads --without-pam --without-ad-dc --disable-python --without-json --without-libarchive && make
 
     # Create a symlink in the Samba VFS modules dir pointing to the compiled VFS
     if [ -d /usr/lib/x86_64-linux-gnu ]; then LIBDIR=/usr/lib/x86_64-linux-gnu; elif [ "`uname -m`" = "x86_64" ]; then LIBDIR=/usr/lib64; else LIBDIR=/usr/lib; fi
     V=`/usr/sbin/smbd --version | awk '{print $2}' | awk -F'-' '{print $1}' | awk -F'.' '{print $1$2}'`
     cp bin/default/source3/modules/libvfs*greyhole.so greyhole-samba${V}.so
-    ln -s `pwd`/greyhole-samba${V}.so ${LIBDIR}/samba/vfs/greyhole.so
+    sudo ln -s `pwd`/greyhole-samba${V}.so ${LIBDIR}/samba/vfs/greyhole.so
 
 4. Add Greyhole to services that start on boot:
 
