New command: greyhole --print-fsck : Print the fsck report for the last completed fsck task. This will print the same content that is sent by email when the --email-report option is used.

--- a/docs/greyhole.1
+++ b/docs/greyhole.1
@@ -32,6 +32,10 @@ Schedule a fsck.
 \-C, \-\-cancel\-fsck
 Cancel any ongoing or scheduled fsck operations.
 .TP
+\-F, \-\-print\-fsck
+Print the fsck report for the last completed fsck task. This will print the
+same content that is sent by email when the --email-report option is used.
+.TP
 \-l, \-\-balance
 Balance available space on storage pool drives.
 .TP
