Improvement: Renamed `--replace` to `--replaced`

--- a/docs/greyhole.1
+++ b/docs/greyhole.1
@@ -88,7 +88,7 @@ number of file copies are created to replace the missing drive.
 If you don't supply an option, the available options (paths)
 will be displayed.
 .TP
-\-r, \-\-replace[=path]
+\-r, \-\-replaced[=path]
 Tell Greyhole that you replaced the drive at <path>. This is not 
 necessary if you used \-\-remove to remove the drive.
 .TP
