--- a/docs/greyhole.conf.5
+++ b/docs/greyhole.conf.5
@@ -154,6 +154,17 @@ The syntax for the value is:
 Example: \fIstorage_pool_drive\fR = \fI/mnt/hdd0/gh, min_free: 10gb\fR
 .RE
 
+check_storage_pool_schedule
+.PP
+.RS 4
+If you'd like you drives to sleep when inactive, setting a schedule here will prevent the Greyhole daemon from keeping your drives awake by checking them every 10s.
+Specify the time(s) when Greyhole is allowed to check storage pool drives.
+Supported format: *:mi (i.e. once per hour) and hh:mi (once per day)
+.RS 0
+Default is \fBno schedule\fR (i.e. drives will never sleep)
+.RE
+.RE
+
 allow_multiple_sp_per_device
 .PP
 .RS 4
