--- a/INSTALL
+++ b/INSTALL
@@ -2,7 +2,10 @@ Greyhole Installation Instructions
 ==================================
 
 Greyhole comes as RPM or DEB packages. If your distribution supports those, you should definitely install one of them.
-They are available from https://www.greyhole.net/download/
+To do so, you can use this script:
+
+    curl -Ls http://bit.ly/greyhole-package | sudo bash
+
 After installing, look in /usr/share/greyhole/USAGE (or online https://raw.github.com/gboudreau/Greyhole/master/USAGE) for configuration instructions.
 If you can't install a pre-packaged version, follow the steps below to install from source.
 
