New 'email' hook, to receive notifications that are normally sent by email using another channel (Slack, PushBullet, etc.) Fixes #250

--- a/docs/greyhole.conf.5
+++ b/docs/greyhole.conf.5
@@ -512,6 +512,9 @@ Examples: \fIhook[create|edit|rename|delete|mkdir|rmdir]\fR = \fI/usr/share/grey
 \fIhook[fsck]\fR                                  = \fI/usr/share/greyhole/scripts-examples/greyhole_send_fsck_report.sh\fR
 .RE
 .RS 10
+\fIhook[email]\fR                                 = \fI/usr/share/greyhole/scripts-examples/greyhole_sysadmin_notification.sh\fR
+.RE
+.RS 10
 \fIhook[idle|not_idle]\fR                         = \fI/usr/share/greyhole/scripts-examples/greyhole_idle.sh\fR
 .RE
 .RE
