--- a/INSTALL
+++ b/INSTALL
@@ -47,6 +47,7 @@ If you know what you're doing, you should have no problem installing on any othe
 	install -m 0755 -D -p scripts-examples/greyhole_idle.sh /usr/share/greyhole/scripts-examples
 	install -m 0755 -D -p scripts-examples/greyhole_notify_error.sh /usr/share/greyhole/scripts-examples
 	install -m 0755 -D -p scripts-examples/greyhole_send_fsck_report.sh /usr/share/greyhole/scripts-examples
+	install -m 0755 -D -p scripts-examples/greyhole_sysadmin_notification.sh /usr/share/greyhole/scripts-examples
 	install -m 0644 -D -p USAGE /usr/share/greyhole
 	install -m 0755 -D -p build_vfs.sh /usr/share/greyhole
 	install -m 0644 -D -p docs/greyhole.1.gz /usr/share/man/man1/
